--- a/index.html
+++ b/index.html
@@ -5,7 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Skilled e-learning landing page</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
+
     <link rel="stylesheet" href="./style/style.css" />
   </head>
-  <body></body>
+  <body>
+    <div class="wrapper">
+      <nav class="nav">
+        <a href="#" class="logo">
+          <img src="./assets/logo-dark.svg" alt="skilled" class="logo__image" />
+        </a>
+      </nav>
+    </div>
+  </body>
 </html>
