Work with HTML,CSS
Add a navigation, add a hero.
Work with image changes on responsivity.

--- a/index.html
+++ b/index.html
@@ -20,7 +20,42 @@
         <a href="#" class="logo">
           <img src="./assets/logo-dark.svg" alt="skilled" class="logo__image" />
         </a>
+        <a href="#" class="link link--started"> Get Started </a>
       </nav>
+      <main class="main">
+        <section class="hero">
+          <div class="hero__typography">
+            <h1 class="heading__primary">
+              <span class="heading__primary--top">Maximize skill,</span
+              ><span class="heading__primary--bottom">minimize budget</span>
+            </h1>
+            <p class="description">
+              Our modern coruses across a range of in-demand skills will give
+              you the knowledge you need to live the life you want
+            </p>
+            <a href="#" class="link link--started link--primary-gradient"
+              >Get Started</a
+            >
+          </div>
+          <div class="hero__image">
+            <picture>
+              <source
+                srcset="./assets/image-hero-mobile.png"
+                media="(max-width:600px)"
+              />
+              <source
+                srcset="./assets/image-hero-tablet.png"
+                media="(max-width:800px)"
+              />
+              <img
+                src="./assets/image-hero-desktop.png"
+                alt="A woman drinking coffee, work on laptop, members and course hours statistics"
+                class="image"
+              />
+            </picture>
+          </div>
+        </section>
+      </main>
     </div>
   </body>
 </html>
