Work with HTML,CSS
Work with hero image, add a gallery and work with responsivity.

--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
       <main class="main">
         <section class="hero">
           <div class="hero__typography">
-            <h1 class="heading__primary">
+            <h1 class="heading__primary u-margin-bottom-small">
               <span class="heading__primary--top">Maximize skill,</span
               ><span class="heading__primary--bottom">minimize budget</span>
             </h1>
-            <p class="description">
+            <p class="description u-margin-bottom-high">
               Our modern coruses across a range of in-demand skills will give
               you the knowledge you need to live the life you want
             </p>
@@ -41,11 +41,11 @@
             <picture>
               <source
                 srcset="./assets/image-hero-mobile.png"
-                media="(max-width:600px)"
+                media="(max-width:38rem)"
               />
               <source
                 srcset="./assets/image-hero-tablet.png"
-                media="(max-width:800px)"
+                media="(max-width:950px)"
               />
               <img
                 src="./assets/image-hero-desktop.png"
@@ -53,6 +53,70 @@
                 class="image"
               />
             </picture>
+          </div>
+        </section>
+        <section class="gallery">
+          <div class="gallery__welcome">
+            <h2 class="heading__secondary">
+              Check out our most popular courses!
+            </h2>
+          </div>
+          <div class="gallery__item">
+            <img
+              src="./assets/icon-animation.svg"
+              alt=""
+              class="gallery__icon"
+            />
+            <h3 class="heading__tertiary">Animation</h3>
+            <p class="description">
+              Learn the latest animation techniques to create stunning motion
+              design and captivate your audience.
+            </p>
+            <a href="#" class="link link--gallery">Get Started</a>
+          </div>
+          <div class="gallery__item">
+            <img src="./assets/icon-design.svg" alt="" class="gallery__icon" />
+            <h3 class="heading__tertiary">Design</h3>
+            <p class="description">
+              Create beautiful, usable interfaces to help shape the future of
+              how the web looks.
+            </p>
+            <a href="#" class="link link--gallery">Get Started</a>
+          </div>
+          <div class="gallery__item">
+            <img
+              src="./assets/icon-photography.svg"
+              alt=""
+              class="gallery__icon"
+            />
+            <h3 class="heading__tertiary">Photography</h3>
+            <p class="description">
+              Explore critical fundamentals like lighting, composition, and
+              focus to capture exceptional photos.
+            </p>
+            <a href="#" class="link link--gallery">Get Started</a>
+          </div>
+          <div class="gallery__item">
+            <img src="./assets/icon-crypto.svg" alt="" class="gallery__icon" />
+            <h3 class="heading__tertiary">Crypto</h3>
+            <p class="description">
+              All you need to know to get started investing in crypto. Go from
+              beginner to advanced with this 54 hour course.
+            </p>
+            <a href="#" class="link link--gallery">Get Started</a>
+          </div>
+          <div class="gallery__item">
+            <img
+              src="./assets/icon-business.svg"
+              alt=""
+              class="gallery__icon"
+            />
+            <h3 class="heading__tertiary">Business</h3>
+            <p class="description">
+              A step-by-step playbook to help you start, scale, and sustain your
+              business without outside investment.
+            </p>
+            <a href="#" class="link link--gallery">Get Started</a>
           </div>
         </section>
       </main>
