Work with HTML,CSS
Add a footer.

--- a/index.html
+++ b/index.html
@@ -121,5 +121,21 @@
         </section>
       </main>
     </div>
+    <footer class="footer">
+      <div class="wrapper">
+        <div class="footer__content">
+          <a href="#" class="logo">
+            <img
+              src="./assets/logo-light.svg"
+              alt="skilled"
+              class="logo__image"
+            />
+          </a>
+          <a href="#" class="link link--started link--secondary-gradient">
+            Get Started
+          </a>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
