add a meta tags

--- a/index.html
+++ b/index.html
@@ -12,6 +12,16 @@
       rel="stylesheet"
     />
 
+    <meta
+      name="keywords"
+      content="Skilled,Learning,Landing Page, Maximize skill, minimze budget, courses, popular courses"
+    />
+
+    <meta
+      name="description"
+      content="Check Our modern coruses across a range of in-demand skills will give you the knowledge you need to live the life you want "
+    />
+
     <link rel="stylesheet" href="./style/style.css" />
   </head>
   <body>
